# lacre

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
examples/: evil_byte_demo.rs
src/: backend.rs  cartorio_client.rs  config.rs  error.rs  gate.rs  lib.rs  main.rs  metrics.rs  routes.rs  testing.rs
tests/: cartorio_integration.rs  gate.rs
