[package]
name = "lacre"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Pleme Team <team@pleme.io>"]
description = "Compliant OCI registry seal — gates image pushes through cartorio"
license = "MIT"
repository = "https://github.com/pleme-io/lacre"

[lib]
name = "lacre"
path = "src/lib.rs"

[[bin]]
name = "lacre"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
bytes = "1.10"
http = "1.3"

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
